--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-.NineMensMorris.pro.user
+# This file is used to ignore files which are generated
+# ----------------------------------------------------------------------------
+
+# qtcreator generated files
+*.pro.user*
